# jsr

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  endpoint.cpp  endpoint.h  httpclient.cpp  httpclient.h  main.cpp  qtquickcontrols2.conf
qml/: AppSettings.qml  BottomBar.ui.qml  Constants.qml  ExplorePage.ui.qml  HomePage.qml  Main.qml  PackageCard.ui.qml  ProfilePage.ui.qml  SettingsPage.qml  SideBar.ui.qml
